# fletapp

./: main.py  pyproject.toml  requirements.txt
assets/: manifest.json
src/: main.py
