[project]
name = "fletapp"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Flet developer", email = "you@example.com" }]
dependencies = [
    "flet==0.70.0.dev5623",
    "mylocale",
    "git+https://github.com/flet-dev/flet-video.git",
    "git+https://github.com/flet-dev/flet-audio.git",
]

[tool.flet]
# Docs: https://flet.dev/docs/publish
org = "de.cmg"
product = "Video Player"
company = "Creative Media Group"
copyright = "Copyright (C) 2025 by Creative Media Group"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = ["flet[all]==0.70.0.dev5623"]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = { extras = ["all"], version = "0.70.0.dev5623" }
